@@ -3,6 +3,9 @@ Revision history for Perl extension Fl
 {{$NEXT}}
 
     - Callbacks no longer cause crash due to bad ref counts
+    - New widgets:
+        - Fl::CheckButton - a button with a checkbox
+        - Fl::LightButton - a button with a light to indicate 'on' vs 'off'
 
 0.99.4 2016-05-06T02:02:22Z
 
